--- a/notebooks/case_study.ipynb
+++ b/notebooks/case_study.ipynb
@@ -12,27 +12,7 @@
     "sys.path.insert(0, \"/home/ang/usd_ang/lib/python\")\n",
     "os.environ[\"LD_LIBRARY_PATH\"] = \"/home/ang/usd_ang/lib\"\n",
     "\n",
-    "import pxr\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d25d585f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "print(os.environ.get(\"PYTHONPATH\"))\n"
+    "import pxr\n"
    ]
   },
   {
@@ -58,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bab2b869",
    "metadata": {},
    "outputs": [],
@@ -74,48 +54,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3084b125",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/usr/bin/python\n",
-      "3.10.12 (main, Jan  8 2026, 06:52:19) [GCC 11.4.0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.executable)\n",
-    "print(sys.version)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0da20746",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/usr/local/lib/python3.10/dist-packages', '/usr/lib/python3/dist-packages', '/usr/lib/python3.10/dist-packages']\n",
-      "/home/ang/.local/lib/python3.10/site-packages\n"
-     ]
-    }
-   ],
-   "source": [
-    "import site\n",
-    "print(site.getsitepackages())\n",
-    "print(site.getusersitepackages())\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "559cc1e7",
    "metadata": {},
@@ -128,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6e17c912",
    "metadata": {},
    "outputs": [
@@ -140,7 +78,7 @@
        " PosixPath('/home/ang/Desktop/GC/main/GC-Sysml-OpenUSD/database/scenes/HabitationAssembly.usda'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "59beb349",
    "metadata": {},
    "outputs": [
@@ -226,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d765df6c",
    "metadata": {},
    "outputs": [
@@ -236,7 +174,7 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "938d9534",
    "metadata": {},
    "outputs": [
@@ -276,7 +214,7 @@
        " 'children': ['O2Tank1', 'O2Tank2']}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1d141b74",
    "metadata": {},
    "outputs": [
@@ -312,7 +250,7 @@
        "['HabitationModule', 'O2Tank1', 'O2Tank2']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "0971aa1c",
    "metadata": {},
    "outputs": [
@@ -359,7 +297,7 @@
        "  'component': 'database/assets/components/O2Tank2.usda'}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "4fb59413",
    "metadata": {},
    "outputs": [
@@ -407,7 +345,7 @@
        "'database/scenes/assembly.usda'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
