--- a/notebooks/case_study_isru.ipynb
+++ b/notebooks/case_study_isru.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a4e0020e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "# S24 pipeline\n",
     "from S24.sysml import sysml_to_json, write_json\n",
     "from S24.jsonio.vetting import VettingProc\n",
-    "from S24.usd.builder import USDBuilder\n"
+    "from S24.usd.builder import USDBuilder"
    ]
   },
   {
