--- a/notebooks/case_study_material.ipynb
+++ b/notebooks/case_study_material.ipynb
@@ -33,14 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USD loaded successfully\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Add repo root to Python path\n",
+    "ROOT = Path.cwd().parent\n",
+    "sys.path.insert(0, str(ROOT))\n",
+    "\n",
     "# Standard library\n",
     "import os\n",
     "import json\n",
-    "from pathlib import Path\n",
     "\n",
     "# Verify USD is available\n",
     "from pxr import Usd, UsdShade\n",
@@ -64,12 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SysML system:  /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/sysml/habitation.sysml\n",
+      "SysML materials: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/sysml/materials.sysml\n",
+      "JSON parts:      /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/json/habmod.json\n",
+      "JSON materials:  /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/json/materials.json\n",
+      "Material library: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/mtl/lunar_materials.usda\n",
+      "Scene output:    /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/scenes/HabitationAssembly.usda\n"
+     ]
+    }
+   ],
    "source": [
-    "ROOT = Path.cwd().parent  # repo root (assuming notebook is in notebooks/)\n",
-    "\n",
     "# SysML sources\n",
     "SYSML_DIR       = ROOT / \"database\" / \"sysml\"\n",
     "SYSML_SYSTEM    = SYSML_DIR / \"habitation.sysml\"\n",
@@ -113,9 +138,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== System Model (first 600 chars) ===\n",
+      "    package 'Habitation Module' {\n",
+      "\n",
+      "        // -------------------------------------------------------------------------\n",
+      "        // Basic items\n",
+      "        // -------------------------------------------------------------------------\n",
+      "        private import SysML::*;\n",
+      "        private import SI::*;\n",
+      "        private import ISQBase::*;\n",
+      "        private import ScalarValues::*;\n",
+      "\n",
+      "        part HabitationModule {\n",
+      "            part HabitationModule_dims {\n",
+      "                attribute length = 15; // meters\n",
+      "                attribute width = 10; // meters\n",
+      "                attribute height = 5; // meters\n",
+      "\n",
+      "               ...\n"
+     ]
+    }
+   ],
    "source": [
     "# Load system model\n",
     "sysml_system_text = SYSML_SYSTEM.read_text(encoding=\"utf-8\")\n",
@@ -125,9 +175,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Materials Model (first 600 chars) ===\n",
+      "package 'Materials' {\n",
+      "\n",
+      "    private import SysML::*;\n",
+      "    private import SI::*;\n",
+      "    private import ISQBase::*;\n",
+      "    private import ScalarValues::*;\n",
+      "\n",
+      "    // -------------------------------------------------------------------------\n",
+      "    // Material definition (source of truth for physical properties)\n",
+      "    // -------------------------------------------------------------------------\n",
+      "    part def Material {\n",
+      "        attribute materialId : String;\n",
+      "\n",
+      "        // Physical properties (SI units expected)\n",
+      "        attribute density_kg_m3;\n",
+      "        attribute youngModulus_Pa;\n",
+      "        attribute poissonRatio;\n",
+      "         ...\n"
+     ]
+    }
+   ],
    "source": [
     "# Load materials model\n",
     "sysml_materials_text = SYSML_MATERIALS.read_text(encoding=\"utf-8\")\n",
@@ -152,9 +228,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exported 3 parts to habmod.json\n",
+      "\n",
+      "{\n",
+      "  \"type\": \"Part\",\n",
+      "  \"id\": \"urn:lunarspaceport1:part:HabitationModule:001\",\n",
+      "  \"name\": \"HabitationModule\",\n",
+      "  \"dimensions\": {\n",
+      "    \"dims_m\": [\n",
+      "      15.0,\n",
+      "      10.0,\n",
+      "      5.0\n",
+      "    ],\n",
+      "    \"metersPerUnit\": 1,\n",
+      "    \"upAxis\": \"Z\",\n",
+      "    \"X\": 0,\n",
+      "    \"Y\": 0,\n",
+      "    \"Z\": 0\n",
+      "  },\n",
+      "  \"attributes\": {\n",
+      "    \"HabitationModule_volume_m3\": 750.0\n",
+      "  },\n",
+      "  \"metadata\": {\n",
+      "    \"geometry\": \"assets/geom/HabModule_geom.usda\"\n",
+      "  },\n",
+      "  \"materialRef\": \"Titanium_Ti6Al4V\",\n",
+      "  \"children\": [\n",
+      "    \"O2Tank1\",\n",
+      "    \"O2Tank2\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "parts_json = sysml_to_json(sysml_system_text, namespace=\"lunarspaceport1\")\n",
     "write_json(parts_json, str(JSON_PARTS))\n",
@@ -178,9 +291,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exported 2 materials to materials.json\n",
+      "\n",
+      "  - Aluminum_2219_T87\n",
+      "      density_kg_m3: 2840.0\n",
+      "      youngModulus_Pa: 73000000000.0\n",
+      "      poissonRatio: 0.33\n",
+      "      yieldStrength_Pa: 350000000.0\n",
+      "      ultimateStrength_Pa: 450000000.0\n",
+      "      thermalConductivity_W_mK: 120.0\n",
+      "      specificHeat_J_kgK: 900.0\n",
+      "      cte_1_K: 2.3e-05\n",
+      "      standard: AA 2219-T87\n",
+      "      source: TBD\n",
+      "  - Titanium_Ti6Al4V\n",
+      "      density_kg_m3: 4430.0\n",
+      "      youngModulus_Pa: 114000000000.0\n",
+      "      poissonRatio: 0.34\n",
+      "      yieldStrength_Pa: 880000000.0\n",
+      "      ultimateStrength_Pa: 950000000.0\n",
+      "      thermalConductivity_W_mK: 6.7\n",
+      "      specificHeat_J_kgK: 560.0\n",
+      "      cte_1_K: 8.6e-06\n",
+      "      standard: Ti-6Al-4V\n",
+      "      source: TBD\n"
+     ]
+    }
+   ],
    "source": [
     "materials = sysml_to_materials(sysml_materials_text)\n",
     "write_materials_json(materials, str(JSON_MATERIALS))\n",
@@ -211,9 +355,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vetted 3 parts:\n",
+      "  - HabitationModule (material: Titanium_Ti6Al4V, parent: None)\n",
+      "  - O2Tank1 (material: Aluminum_2219_T87, parent: HabitationModule)\n",
+      "  - O2Tank2 (material: Aluminum_2219_T87, parent: HabitationModule)\n"
+     ]
+    }
+   ],
    "source": [
     "vetting = VettingProc(str(JSON_PARTS))\n",
     "vetted_parts = vetting.by_name\n",
@@ -235,9 +390,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known materials: ['Aluminum_2219_T87', 'Titanium_Ti6Al4V']\n",
+      "\n",
+      "  OK: HabitationModule -> Titanium_Ti6Al4V\n",
+      "  OK: O2Tank1 -> Aluminum_2219_T87\n",
+      "  OK: O2Tank2 -> Aluminum_2219_T87\n",
+      "\n",
+      "All material references are valid.\n"
+     ]
+    }
+   ],
    "source": [
     "known_material_ids = {m[\"materialId\"] for m in materials}\n",
     "\n",
@@ -274,9 +443,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated material library: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/mtl/lunar_materials.usda\n",
+      "\n",
+      "#usda 1.0\n",
+      "(\n",
+      "    defaultPrim = \"Materials\"\n",
+      ")\n",
+      "\n",
+      "def Scope \"Materials\"\n",
+      "{\n",
+      "    def Material \"Aluminum_2219_T87\" (\n",
+      "        customData = {\n",
+      "            double cte_1_K = 0.000023\n",
+      "            double density_kg_m3 = 2840\n",
+      "            double poissonRatio = 0.33\n",
+      "            string source = \"TBD\"\n",
+      "            double specificHeat_J_kgK = 900\n",
+      "            string standard = \"AA 2219-T87\"\n",
+      "            double thermalConductivity_W_mK = 120\n",
+      "            double ultimateStrength_Pa = 450000000\n",
+      "            double yieldStrength_Pa = 350000000\n",
+      "            double youngModulus_Pa = 73000000000\n",
+      "        }\n",
+      "    )\n",
+      "    {\n",
+      "    }\n",
+      "\n",
+      "    def Material \"Titanium_Ti6Al4V\" (\n",
+      "        customData = {\n",
+      "            double cte_1_K = 0.0000086\n",
+      "            double density_kg_m3 = 4430\n",
+      "            double poissonRatio = 0.34\n",
+      "            string source = \"TBD\"\n",
+      "            double specificHeat_J_kgK = 560\n",
+      "            string standard = \"Ti-6Al-4V\"\n",
+      "            double thermalConductivity_W_mK = 6.7\n",
+      "            double ultimateStrength_Pa = 950000000\n",
+      "            double yieldStrength_Pa = 880000000\n",
+      "            double youngModulus_Pa = 114000000000\n",
+      "        }\n",
+      "    )\n",
+      "    {\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "generate_material_library(str(JSON_MATERIALS), str(MAT_LIBRARY_PATH))\n",
     "\n",
@@ -302,9 +523,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated USD assets:\n",
+      "  HabitationModule:\n",
+      "    geom: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/geoms/HabitationModule_geom.usda\n",
+      "    component: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/components/HabitationModule.usda\n",
+      "  O2Tank1:\n",
+      "    geom: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/geoms/O2Tank1_geom.usda\n",
+      "    component: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/components/O2Tank1.usda\n",
+      "  O2Tank2:\n",
+      "    geom: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/geoms/O2Tank2_geom.usda\n",
+      "    component: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/assets/components/O2Tank2.usda\n"
+     ]
+    }
+   ],
    "source": [
     "builder = USDBuilder(\n",
     "    vetted_parts,\n",
@@ -336,9 +574,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[REF] /World/HabitationModule -> ../assets/components/HabitationModule.usda :/HabitationModule\n",
+      "[REF] /World/HabitationModule/O2Tank1 -> ../assets/components/O2Tank1.usda :/O2Tank1\n",
+      "[REF] /World/HabitationModule/O2Tank2 -> ../assets/components/O2Tank2.usda :/O2Tank2\n",
+      "Assembly scene written to: /Users/arthur/Documents/GitHub/S24-ArchitectingLunarBases/database/scenes/HabitationAssembly.usda\n"
+     ]
+    }
+   ],
    "source": [
     "scene_path = builder.write_assembly_scene(\n",
     "    scene_name=\"HabitationAssembly.usda\",\n",
@@ -362,24 +611,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USD Scene Hierarchy:\n",
+      "  World (Xform)\n",
+      "    HabitationModule (Xform)\n",
+      "      geom (Mesh)\n",
+      "      materials (Scope)\n",
+      "        Aluminum_2219_T87 (Material)\n",
+      "        Titanium_Ti6Al4V (Material)\n",
+      "      O2Tank1 (Xform)\n",
+      "        geom (Mesh)\n",
+      "        materials (Scope)\n",
+      "          Aluminum_2219_T87 (Material)\n",
+      "          Titanium_Ti6Al4V (Material)\n",
+      "      O2Tank2 (Xform)\n",
+      "        geom (Mesh)\n",
+      "        materials (Scope)\n",
+      "          Aluminum_2219_T87 (Material)\n",
+      "          Titanium_Ti6Al4V (Material)\n"
+     ]
+    }
+   ],
    "source": [
     "stage = Usd.Stage.Open(scene_path)\n",
     "\n",
     "print(\"USD Scene Hierarchy:\")\n",
     "for prim in stage.Traverse():\n",
-    "    depth = len(prim.GetPath().GetString().split(\"/\")) - 1\n",
+    "    depth = len(str(prim.GetPath()).split(\"/\")) - 1\n",
     "    indent = \"  \" * depth\n",
     "    print(f\"{indent}{prim.GetName()} ({prim.GetTypeName()})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Material Bindings:\n"
+     ]
+    }
+   ],
    "source": [
     "# Verify material bindings\n",
     "print(\"Material Bindings:\")\n",
@@ -425,13 +706,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "s24-usd",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
