--- a/notebooks/case_study_material.ipynb
+++ b/notebooks/case_study_material.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -701,6 +701,89 @@
     "```bash\n",
     "usdview database/scenes/HabitationAssembly.usda\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What follow is just a verification that all modules possess the correct material"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== HabitationModule.usda ===\n",
+      "  geom: materialHint = ../mtl/lunar_materials.usda:/Materials/Titanium_Ti6Al4V\n",
+      "  Aluminum_2219_T87: customData = {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: customData = {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n",
+      "\n",
+      "=== ISRUPlant.usda ===\n",
+      "  geom: materialHint = ../mtl/lunar_materials.usda:/Materials/Aluminum_2219_T87\n",
+      "  Aluminum_2219_T87: customData = {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: customData = {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n",
+      "\n",
+      "=== LandingLaunchZone.usda ===\n",
+      "  geom: materialHint = ../mtl/lunar_materials.usda:/Materials/Aluminum_2219_T87\n",
+      "  Aluminum_2219_T87: customData = {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: customData = {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n",
+      "\n",
+      "=== LunarRover.usda ===\n",
+      "  geom: materialHint = ../mtl/lunar_materials.usda:/Materials/Aluminum_2219_T87\n",
+      "  Aluminum_2219_T87: customData = {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: customData = {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n",
+      "\n",
+      "=== O2Tank1.usda ===\n",
+      "  geom: materialHint = ../mtl/lunar_materials.usda:/Materials/Aluminum_2219_T87\n",
+      "  Aluminum_2219_T87: customData = {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: customData = {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n",
+      "\n",
+      "=== O2Tank2.usda ===\n",
+      "  geom: materialHint = ../mtl/lunar_materials.usda:/Materials/Aluminum_2219_T87\n",
+      "  Aluminum_2219_T87: customData = {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: customData = {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n",
+      "\n",
+      "=== Material Library ===\n",
+      "  Aluminum_2219_T87: {'cte_1_K': 2.3e-05, 'density_kg_m3': 2840.0, 'poissonRatio': 0.33, 'source': 'TBD', 'specificHeat_J_kgK': 900.0, 'standard': 'AA 2219-T87', 'thermalConductivity_W_mK': 120.0, 'ultimateStrength_Pa': 450000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 350000000.0, 'youngModulus_Pa': 73000000000.0}\n",
+      "  Titanium_Ti6Al4V: {'cte_1_K': 8.6e-06, 'density_kg_m3': 4430.0, 'poissonRatio': 0.34, 'source': 'TBD', 'specificHeat_J_kgK': 560.0, 'standard': 'Ti-6Al-4V', 'thermalConductivity_W_mK': 6.7, 'ultimateStrength_Pa': 950000000.0, 'userDocBrief': 'A Material provides a container into which multiple \"render contexts\"\\n    can add data that defines a \"shading material\" for a renderer.', 'yieldStrength_Pa': 880000000.0, 'youngModulus_Pa': 114000000000.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check material data is written in component files\n",
+    "import os\n",
+    "from pxr import Usd\n",
+    "\n",
+    "comps_dir = ROOT / \"database\" / \"assets\" / \"components\"\n",
+    "for f in sorted(os.listdir(comps_dir)):\n",
+    "    if f.endswith(\".usda\"):\n",
+    "        comp_stage = Usd.Stage.Open(str(comps_dir / f))\n",
+    "        print(f\"=== {f} ===\")\n",
+    "        for prim in comp_stage.Traverse():\n",
+    "            # Check material binding hint\n",
+    "            hint = prim.GetCustomDataByKey(\"materialHint\")\n",
+    "            if hint:\n",
+    "                print(f\"  {prim.GetName()}: materialHint = {hint}\")\n",
+    "            # Check customData on material prims\n",
+    "            if prim.GetTypeName() == \"Material\":\n",
+    "                cd = prim.GetCustomData()\n",
+    "                if cd:\n",
+    "                    print(f\"  {prim.GetName()}: customData = {dict(cd)}\")\n",
+    "        print()\n",
+    "\n",
+    "# Also check the material library directly\n",
+    "print(\"=== Material Library ===\")\n",
+    "mat_stage = Usd.Stage.Open(str(MAT_LIBRARY_PATH))\n",
+    "for prim in mat_stage.Traverse():\n",
+    "    if prim.GetTypeName() == \"Material\":\n",
+    "        cd = prim.GetCustomData()\n",
+    "        print(f\"  {prim.GetName()}: {dict(cd)}\")"
    ]
   }
  ],
